--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head><meta http-equiv="refresh" content="0; URL=https://music.youtube.com/watch?v=_deqdZmKzyg" /></head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1 style="text-align:center">Happy Rose Day my love</h1>
+<h2 style="text-align:center">Hello My Aakasrhini</h2>
+<p>I dedicate this song to you: (khulega apne aap pls wait)</p>
+<p>I will keep updating this so make sure u keep an eye on!</p>
 </body>
 </html>
