--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head><meta http-equiv="refresh" content="0; URL=https://music.youtube.com/playlist?list=OLAK5uy_l70lTLVT2eDABPv_gSUCICvTUCAatDXAg" /></head>
+<head><meta http-equiv="refresh" content="3; URL=https://music.youtube.com/playlist?list=OLAK5uy_l70lTLVT2eDABPv_gSUCICvTUCAatDXAg" /></head>
 <body>
 <h1 style="text-align:center">Happy Rose Day my love</h1>
 <h2 style="text-align:center">Hello My Aakasrhini</h2>
-<p>I dedicate this song to you: (khulega apne aap pls wait) or if it does not click the button below!</p>
+<p>I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
 <p>I will keep updating this so make sure u keep an eye on!</p>
 <a href="https://music.youtube.com/playlist?list=OLAK5uy_l70lTLVT2eDABPv_gSUCICvTUCAatDXAg"><button>Redirect Now</button></a>
 </body>
