--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head><meta http-equiv="refresh" content="5; URL=hhttps://music.youtube.com/playlist?list=OLAK5uy_l70lTLVT2eDABPv_gSUCICvTUCAatDXAg&si=DF-Ks3NGD6hLLoV2" /></head>
+<head><meta http-equiv="refresh" content="3; URL=hhttps://music.youtube.com/playlist?list=OLAK5uy_l70lTLVT2eDABPv_gSUCICvTUCAatDXAg&si=DF-Ks3NGD6hLLoV2" /></head>
 <body>
 <h1 style="text-align:center">Happy Rose Day my love</h1>
 <h2 style="text-align:center">Hello My Aakasrhini</h2>
-<p>I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
-<p>I will keep updating this so make sure u keep an eye on!</p>
-<a href="https://music.youtube.com/playlist?list=OLAK5uy_l70lTLVT2eDABPv_gSUCICvTUCAatDXAg&si=DF-Ks3NGD6hLLoV2"><button>Redirect Now</button></a>
+<p style="text-align:center">I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
+<p style="text-align:center">I will keep updating this so make sure u keep an eye on!</p>
+<div>
+<a href="https://music.youtube.com/playlist?list=OLAK5uy_l70lTLVT2eDABPv_gSUCICvTUCAatDXAg&si=DF-Ks3NGD6hLLoV2"><button style="position: relative; left: 50%;">Redirect Now</button></a>  
+</div>
+
 </body>
 </html>
