--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><meta http-equiv="refresh" content="3; URL=hhttps://music.youtube.com/playlist?list=OLAK5uy_l70lTLVT2eDABPv_gSUCICvTUCAatDXAg&si=DF-Ks3NGD6hLLoV2" /></head>
+<head><meta http-equiv="refresh" content="5; URL=https://music.youtube.com/playlist?list=OLAK5uy_l70lTLVT2eDABPv_gSUCICvTUCAatDXAg&si=DF-Ks3NGD6hLLoV2" /></head>
 <body>
 <h1 style="text-align:center">Happy Rose Day my love</h1>
 <h2 style="text-align:center">Hello My Aakasrhini</h2>
