--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head><meta http-equiv="refresh" content="5; URL=https://music.youtube.com/playlist?list=OLAK5uy_l70lTLVT2eDABPv_gSUCICvTUCAatDXAg&si=DF-Ks3NGD6hLLoV2" /></head>
 <body>
-<h1 style="text-align:center">Happy Rose Day my love</h1>
-<h2 style="text-align:center">Hello My Aakasrhini</h2>
+<h1 style="text-align:center">Happy Rose Day my love!!</h1>
+<h2 style="text-align:center">Hi meri Aakasrhini, meri Jaan!!</h2>
 <p style="text-align:center">I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
 <p style="text-align:center">I will keep updating this so make sure u keep an eye on!</p>
 <div>
 <a href="https://music.youtube.com/playlist?list=OLAK5uy_l70lTLVT2eDABPv_gSUCICvTUCAatDXAg&si=DF-Ks3NGD6hLLoV2"><button style="position: relative; left: 50%;">Redirect Now</button></a>  
+<img src="rosehandmade.jpg" alt="A handmade rose for you(PS: Sorry for fuck ups!)">
 </div>
 
 </body>
