--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <p style="text-align:center">I will keep updating this so make sure u keep an eye on!</p>
 <div>
 <a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style="position: relative; left: 50%;">Redirect Now</button></a>  
-<img src="rosehandmade.jpg" alt="A handmade rose for you(PS: Sorry for fuck ups !)">
-</div>
 
+</div>
+<img src="rosehandmade.jpg" alt="I love you, Honey">
 </body>
 </html>
