--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style="position: relative; left: 50%;">Redirect Now</button></a>  
 
 </div>
-<img src="rosehandmade.jpg" alt="I love you, Honey">
+<img src="rosie.jpg" alt="I love you, Honey">
 </body>
 </html>
