--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta http-equiv="refresh" content="5; URL=https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA" /></head>
 <body>
-<h1 style="text-align:center font-size:10vw">Happy Rose Day my love!!</h1>
+<h1 style="text-align:center; font-size:10vw">Happy Rose Day my love!!</h1>
 <h2 style="text-align:center">Hi meri Aakasrhini, meri Jaan!!</h2>
 <p style="text-align:center">I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
 <p style="text-align:center">I will keep updating this so make sure u keep an eye on!</p>
