--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head><meta http-equiv="refresh" content="5; URL=https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA" /></head>
 <body>
 <h1 style="text-align:center; font-size:10vw">Happy Rose Day my love!!</h1>
-<h2 style="text-align:center">Hi meri Aakasrhini, meri Jaan!!</h2>
-<p style="text-align:center">I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
-<p style="text-align:center">I will keep updating this so make sure u keep an eye on!</p>
-<div>
-<a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style="position: relative; left: 50%;">Redirect Now</button></a>  
+<h2 style="text-align:center; font-size:7vw">Hi meri Aakasrhini, meri Jaan!!</h2>
+<p style="text-align:center; font-size:5vw">I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
 
+<div>
+<a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style="position: relative; left: 50%; font-size:6vw">Redirect Now</button></a>  
+  
 </div>
-<img src="rosie.jpg" alt="I love you, Honey">
+<p style="text-align:center; font-size:5vw">I will keep updating this so make sure u keep an eye on!</p>
+<img src="rosie.jpg" alt="Couldn't load the rose :(">
+<p style="text-align:center; font-size:4vw">Here is a rose for you, Honey!</p>
 </body>
 </html>
