--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <h2 style="text-align:center; font-size:7vw">Hi meri Aakasrhini, meri Jaan!!</h2>
 <p style="text-align:center; font-size:5vw">I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
 
-<div>
-<a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style="position: relative; left: 50%; font-size:6vw">Redirect Now</button></a>  
+<div style="text-align:center">
+<a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style=" font-size:4vw">Redirect Now</button></a>  
   
 </div>
 <p style="text-align:center; font-size:5vw">I will keep updating this so make sure u keep an eye on!</p>
