--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
 <head><meta http-equiv="refresh" content="5; URL=https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA" /></head>
 <body>
-<h1 style="text-align:center; font-size:10vw">Happy Rose Day my love!!</h1>
-<h2 style="text-align:center; font-size:7vw">Hi meri Aakasrhini, meri Jaan!!</h2>
-<p style="text-align:center; font-size:5vw">I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
-
+<h1 style="text-align:center; font-size:8vw">Happy Rose Day my love!!</h1>
+<h2 style="text-align:center; font-size:5vw">Hi meri Aakasrhini, meri Jaan!!</h2>
+<p style="text-align:center; font-size:3vw">I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
+<p></p>
+<p></p>
+<p style="text-align:center; font-size:2vw">Here is a rose for you, Honey! :)</p>
 <div style="text-align:center">
   <a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style=" font-size:4vw">Redirect Now</button></a>  
   <img src="rosie.jpg" alt="Couldn't load the rose :(">
 </div>
-<p style="text-align:center; font-size:4vw">Here is a rose for you, Honey!</p>
+
 <hr>
-<p style="text-align:center; font-size:5vw">I will keep updating this so make sure u keep an eye on!</p>
+<p style="text-align:center; font-size:1vw">I will keep updating this so make sure u keep an eye on!</p>
 </body>
 </html>
