--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <p style="text-align:center; font-size:2vw">Here is a rose for you, Honey! :)</p>
 <div style="text-align:center">
   <a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style=" font-size:4vw">Redirect Now</button></a>  
-  <img src="rosie.jpg" alt="Couldn't load the rose :(">
+  <img src="rosie.jpg" alt="Couldn't load the rose :(" style="position:relative; left:50%; right:50%">
 </div>
 
 <hr>
-<p style="text-align:center; font-size:1vw">I will keep updating this so make sure u keep an eye on!</p>
+<p style="text-align:center; font-size:1.5vw">I will keep updating this so make sure u keep an eye on!</p>
 </body>
 </html>
