--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <p style="text-align:center; font-size:3vw">I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
 <p></p>
 <p></p>
-<p style="text-align:center; font-size:2vw">Here is a rose for you, Honey! :)</p>
+
 <div style="text-align:center">
-  <a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style=" font-size:4vw">Redirect Now</button></a>  
+  <a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style=" font-size:2vw">Redirect Now</button></a>  
+  <p style="text-align:left; font-size:2vw">Here is a rose for you, Honey! :)</p>
   <img src="rosie.jpg" alt="Couldn't load the rose :(" style="position:relative; left:50%; right:50%">
 </div>
 
