--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <p></p>
 
 <div style="text-align:center">
-  <a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style=" font-size:2vw">Redirect Now</button></a>  
-  <p style="text-align:left; font-size:2vw">Here is a rose for you, Honey! :)</p>
-  <img src="rosie.jpg" alt="Couldn't load the rose :(" style="position:relative; left:50%; right:50%">
+  <a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style=" font-size:3vw">Redirect Now</button></a>  
+  <p style="text-align:left; font-size:3vw">Here is a rose for you, Honey! :)</p>
+  <img src="rosie.jpg" alt="Couldn't load the rose :(">
 </div>
 
 <hr>
-<p style="text-align:center; font-size:1.5vw">I will keep updating this so make sure u keep an eye on!</p>
+<p style="text-align:center; font-size:3vw">I will keep updating this so make sure u keep an eye on!</p>
 </body>
 </html>
