--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head><meta http-equiv="refresh" content="5; URL=https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA" /></head>
+<head><meta charset="UTF-8"></head>
 <body>
 <h1 style="text-align:center; font-size:8vw">Happy Rose Day my love!!</h1>
 <h2 style="text-align:center; font-size:5vw">Hi meri Aakasrhini, meri Jaan!!</h2>
-<p style="text-align:center; font-size:3vw">I dedicate this song to you: (khulega apne aap pls wait 5s) or if it does not click the button below!</p>
+<p style="text-align:center; font-size:3vw">I dedicate a song to you here! - Choose where to open:</p>
 <p></p>
 <p></p>
 
 <div style="text-align:center">
-  <a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style=" font-size:3vw">Redirect Now</button></a>  
+  <a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style=" font-size:3vw">Open in Spotify</button></a>  
+  <a href="https://music.youtube.com/watch?v=ZJ34geQLtUE"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">Here is a rose for you, Honey! :)</p>
   <img src="rosie.jpg" alt="Couldn't load the rose :(">
 </div>
