--- a/index-protected.html
+++ b/index-protected.html
@@ -147,7 +147,7 @@
         </div>
     </div>
     <div id="attribution">
-        Protected by <a href="https://www.maxlaumeister.com/pagecrypt/">PageCrypt</a>
+       <p>Created by love from Beeeeeee!!!</p>
     </div>
     <script>
     (function() {
