--- a/index-protected.html
+++ b/index-protected.html
@@ -147,7 +147,7 @@
         </div>
     </div>
     <div id="attribution">
-       <p>Created by love from Beeeeeee!!!</p>
+       <p>Created by Beeeeeee with love!!!</p>
     </div>
     <script>
     (function() {
