--- a/homepage.html
+++ b/homepage.html
@@ -2,9 +2,9 @@
 <html lang = "en">
   <head>
     <title>Homepage</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" http-equiv="refresh" content="0; url ='roseday24.html'">
   </head>
   <body>
-    <p style="font-size: 5vw">This is a test run!</p>
+    <p style="font-size: 5vw">Processing request...</p>
   </body>
 </html>
