--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><meta charset="UTF-8" http-equiv="Refresh" content="0; url='homepage.html'" ></head>
+<head><meta charset="UTF-8" http-equiv="Refresh" content="0; url='redirector.html'" ></head>
 <body>
 
 </body>
