--- a/homepage.html
+++ b/homepage.html
@@ -2,9 +2,10 @@
 <html lang = "en">
   <head>
     <title>Homepage</title>
-    <meta charset="UTF-8" http-equiv="refresh" content="5; url ='roseday24.html'">
+    <meta charset="UTF-8">
   </head>
   <body>
     <p style="font-size: 3vw">Processing request...</p>
+    <script>window.location.replace("https://mishti3000.github.io/roseday24.html");</script>
   </body>
 </html>
