--- a/homepage.html
+++ b/homepage.html
@@ -3,6 +3,7 @@
   <head>
     <title>Homepage</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="normalize.css" media="screen" />
   </head>
   <body>
     <p style="font-size: 3vw">Processing request...</p>
