--- a/roseday24.html
+++ b/roseday24.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head><meta charset="UTF-8"></head>
+<head><meta charset="UTF-8">
+<link rel="stylesheet" href="normalize.css" media="screen" />
+</head>
 <body>
 <h1 style="text-align:center; font-size:8vw">Happy Rose Day my love!!</h1>
 <h2 style="text-align:center; font-size:5vw">Hi meri Aakasrhini, meri Jaan!!</h2>
