--- a/homepage.html
+++ b/homepage.html
@@ -2,11 +2,12 @@
 <html lang = "en">
   <head>
     <title>Homepage</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" http-equiv="refresh" content="5; url='proposeday24.html'">
     <link rel="stylesheet" href="normalize.css" media="screen" />
   </head>
   <body>
+    <h1 style="font-size: 5w ; text-align: center">Welcome, Aakarshini</h1>
     <p style="font-size: 3vw">Processing request...</p>
-    <script>window.location.replace("https://mishti3000.github.io/roseday24.html");</script>
+    
   </body>
 </html>
