--- a/proposeday24.html
+++ b/proposeday24.html
@@ -11,8 +11,8 @@
 <p></p>
 
 <div style="text-align:center">
-  <a href="https://open.spotify.com/track/1ZiReD9pPTttQWwSoYqdyH?si=f0rwB_KXRKWY1CbyfJYNcA"><button style=" font-size:3vw">Open in Spotify</button></a>  
-  <a href="https://music.youtube.com/watch?v=ZJ34geQLtUE"><button style=" font-size:3vw">Open in Youtube Music</button></a>
+  <a href="https://open.spotify.com/track/0dLbrlAVPPjpPqnYfmJsWk?si=jLz-fRlbQ6y-AifedD1T3Q">Open in Spotify</button></a>  
+  <ahttps://music.youtube.com/watch?v=oeYgD5w3NQo"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">Here is a letter you honey, Honey! :)</p>
   <a href="love letter.pdf"><img src="letter.jpg" alt="Click to view :("></a>
 </div>
