--- a/protector.html
+++ b/protector.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
-    <title>Password Protected Page</title>
+    <title>Prove viewership</title>
     <style>
         html, body {
             margin: 0;
@@ -147,7 +147,7 @@
         </div>
     </div>
     <div id="attribution">
-        Protected by <a href="https://www.maxlaumeister.com/pagecrypt/">PageCrypt</a>
+        <p>Made by Beeeeeeé for Mishti with LOVE!</p>
     </div>
     <script>
     (function() {
