--- a/proposeday24.html
+++ b/proposeday24.html
@@ -6,7 +6,7 @@
 <body>
 <h1 style="text-align:center; font-size:8vw">Happy Propose Day my love!!</h1>
 <h2 style="text-align:center; font-size:5vw">Hi meri Aakasrhini, meri Jaan!!</h2>
-<p style="text-align:center; font-size:3vw">I aam dedicating this song for you - Choose where to open:</p>
+<p style="text-align:center; font-size:3vw">I am dedicating this song for you - Choose where to open:</p>
 <p></p>
 <p></p>
 
@@ -15,6 +15,7 @@
   <a href="https://music.youtube.com/watch?v=oeYgD5w3NQo"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">There is a letter waiting for you Honey!,Curious?- you may click on the image to get PDF now!!!</p>
   <a href="love letter.pdf" target="_blank"><img src="letter.jpg" alt="Click to view :(" style="width: 80%; hieght: auto"></a>
+  <p style="text-align:left; font-size:3vw">Hint: 3 names!</p>
 </div>
 
 <hr>
