--- a/proposeday24.html
+++ b/proposeday24.html
@@ -6,7 +6,7 @@
 <body>
 <h1 style="text-align:center; font-size:8vw">Happy Propose Day my love!!</h1>
 <h2 style="text-align:center; font-size:5vw">Hi meri Aakasrhini, meri Jaan!!</h2>
-<p style="text-align:center; font-size:3vw">I am dedicating this song for you - Choose where to open:</p>
+<p style="text-align:center; font-size:3vw">I am dedicating this song to you - Choose where to open:</p>
 <p></p>
 <p></p>
 
