--- a/proposeday24.html
+++ b/proposeday24.html
@@ -11,8 +11,8 @@
 <p></p>
 
 <div style="text-align:center">
-  <a href="https://open.spotify.com/track/0dLbrlAVPPjpPqnYfmJsWk?si=jLz-fRlbQ6y-AifedD1T3Q"><button style=" font-size:3vw">Open in Spotify</button></a>  
-  <a href="https://music.youtube.com/watch?v=oeYgD5w3NQo"><button style=" font-size:3vw">Open in Youtube Music</button></a>
+  <a href="https://open.spotify.com/track/4CGBTtlrjZj7ydpV52cgB4?si=j1RMFn5OTomxi9b8qdvZrg"><button style=" font-size:3vw">Open in Spotify</button></a>  
+  <a href="https://music.youtube.com/watch?v=CvcKtsgKiTo"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">There is a letter waiting for you Honey!,Curious?- you may click on the image to get PDF now!!!</p>
   <a href="love letter.pdf" target="_blank"><img src="letter.jpg" alt="Click to view :(" style="width: 80%; hieght: auto"></a>
   <p style="text-align:left; font-size:3vw">Hint: 3 names!</p>
