--- a/protector.html
+++ b/protector.html
@@ -148,7 +148,25 @@
     </div>
     <div id="attribution">
         <p>Made by Beeeeeeé for Mishti with LOVE!</p>
-    </div>
+
+<h6>Last updated at:(MM/DD/YYYY hh:mm)</h1>
+    <span id="datetime"></span>
+
+    <script>
+      // create a function to update the date and time
+      function updateDateTime() {
+        // create a new `Date` object
+        const now = new Date();
+
+        // get the current date and time as a string
+        const currentDateTime = now.toLocaleString();
+
+        // update the `textContent` property of the `span` element with the `id` of `datetime`
+        document.querySelector('#datetime').textContent = currentDateTime;
+      }
+updateDateTime()
+    </script>    </div>
+
     <script>
     (function() {
 
