--- a/proposeday24.html
+++ b/proposeday24.html
@@ -17,7 +17,9 @@
   <a href="love letter.pdf" target="_blank"><img src="letter.jpg" alt="Click to view :(" style="width: 80%; hieght: auto"></a>
   <p style="text-align:left; font-size:3vw">Hint: 3 names!</p>
 </div>
-
+<hr>
+<h2 style="text-align:left; font-size:5vw"> UPDATE:</h2>
+<p style="text-align:left; font-size:3vw">I've already given the letter to you! Didn't see?? Check ur medicine envelope!! Here also the same pdf you get. Since u already have the physical one so i reveal the password of of the above pdf: ( bubududuchasni ). I love you</p>
 <hr>
 <p style="text-align:center; font-size:3vw">I will keep updating this so make sure u keep an eye on!</p>
 </body>
