--- a/protector.html
+++ b/protector.html
@@ -149,23 +149,8 @@
     <div id="attribution">
         <p>Made by Beeeeeeé for Mishti with LOVE!</p>
 
-<h6>Last updated at:(MM/DD/YYYY hh:mm)</h1>
-    <span id="datetime"></span>
-
-    <script>
-      // create a function to update the date and time
-      function updateDateTime() {
-        // create a new `Date` object
-        const now = new Date();
-
-        // get the current date and time as a string
-        const currentDateTime = now.toLocaleString();
-
-        // update the `textContent` property of the `span` element with the `id` of `datetime`
-        document.querySelector('#datetime').textContent = currentDateTime;
-      }
-updateDateTime()
-    </script>    </div>
+<p>Last updated at:(DD/MM/YYYY hh:mm): 08/02/2024 13:55</p>
+      </div>
 
     <script>
     (function() {
