--- a/protector.html
+++ b/protector.html
@@ -149,7 +149,7 @@
     <div id="attribution">
         <p>Made by Beeeeeeé for Mishti with LOVE!</p>
 
-<p>Last updated at:(DD/MM/YYYY hh:mm): 08/02/2024 13:55</p>
+<p>Last updated at: 08/02/2024 13:55</p>
       </div>
 
     <script>
