--- a/proposeday24.html
+++ b/proposeday24.html
@@ -18,7 +18,7 @@
   <p style="text-align:left; font-size:3vw">Hint: 3 names!</p>
 
 <h2 style="text-align:left; font-size:5vw"> UPDATE:</h2>
-<p style="text-align:left; font-size:3vw">I've already given the letter to you! Didn't see?? Check ur medicine envelope!! Here also the same pdf you get. Since u already have the physical one so i reveal the password of of the above pdf: ( bubududuchasni ). I love you</p>
+<p style="text-align:left; font-size:3vw">I've already given the letter to you! Didn't see?? Check ur medicine envelope!! Here also the same pdf you get. Since u already have the physical one so i reveal the password of the above on call. I love you</p>
 </div>
 <hr>
 <p style="text-align:center; font-size:3vw">I will keep updating this so make sure u keep an eye on!</p>
