--- a/chocolateday24.html
+++ b/chocolateday24.html
@@ -17,8 +17,21 @@
   <img src="choco.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
   <p style="text-align:center; font-size:3vw">And look at that drop-dead beauty there
 - will anyone need chocolate if he got a yumm girlfriend!!??- Nahhh! NEVER. She's (you) perfect</p>
+  
 
 </div>
+   <figure>
+                <video
+                    controls
+                    hieght = "50%"
+                    width = "50%"
+                    muted
+                    loop
+                >   
+                    <source src="choco.mp4" type="video/mp4"/>
+                </video>
+                <figcaption>OMG she's so beautiful especially when eating!!!</figcaption>
+   </figure>
 <hr>
 <p style="text-align:center; font-size:3vw">I will keep updating this so make sure u keep an eye on!</p>
 </body>
