--- a/homepage.html
+++ b/homepage.html
@@ -12,6 +12,7 @@
       <h2 style="font-size: 5w">History?: </h2>
       <ul>
         <li><a href="roseday24.html" style="font-size: 3vw">Rose day 2024!</a></li>
+        <li><a href="proposeday24.html" style="font-size: 3vw">Propose day 2024!</a></li>
       </ul>
     </div>
     
