--- a/kissday24.html
+++ b/kissday24.html
@@ -11,10 +11,39 @@
 <p></p>
 
 <div style="text-align:center">
-  <a href="https://open.spotify.com/track/3oWxFNsXstcancCR1wODR4?si=WHT2g0nPSsqsBrgjMKuc5A&context=spotify%3Aplaylist%3A37i9dQZF1DX14CbVHtvHRB"><button style=" font-size:3vw">Open in Spotify</button></a>  
+  <a href="https://open.spotify.com/track/4mBmsPcPa1Eu4LDTHq55Ab?si=4fd44ba078f846d1"><button style=" font-size:3vw">Open in Spotify</button></a>  
   <a href="https://music.youtube.com/watch?v=39BOqZO8xaM"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">Honeyyyyy! Kissss meeeeee!!! You are the cutest see the vude honey u look fabulous!</p>
-  <img src="teddy.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
+  <figure>
+                <video
+                    controls
+                    hieght = "80%"
+                    width = "80%"
+                    muted
+                    loop
+                >   
+                    <source src="kiss.mp4" type="video/mp4"/>
+                    
+                </video>
+                <figcaption>
+                  Kiss by surprise!
+                </figcaption>
+                <br>
+                <br>
+                <video
+                    controls
+                    muted
+                    loop
+                    hieght="80%"
+                    width="80%"
+                >
+                    <source src="kiss2nd.mp4" type="video/mp4"/>
+                    
+                </video>
+                <figcaption>
+                   Kiss by emotions
+                </figcaption>
+            </figure>
   <p style="text-align:center; font-size:3vw">I love you jaan!!</p>
 
 </div>
