--- a/promiseday24.html
+++ b/promiseday24.html
@@ -15,7 +15,25 @@
   <a href="https://music.youtube.com/watch?v=39BOqZO8xaM"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">Today, honey I want to promise you 7 things and will hold them till my last breath.</p>
   <img src="promise.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
-  <p style="text-align:center; font-size:3vw">Will make them fruitful not hollow. I love you jaan!!</p>
+   <p style="text-align:center; font-size:3vw">Will make them fruitful not hollow. I love you jaan!!</p>
+  <img src="promise2.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
+  <p style="text-align:center; font-size:3vw">But I need you to hold my hand like this forever!!
+  AND!!!!!
+  </p>
+  <figure>
+    <video
+      controls
+      muted
+      loop
+      hieght="80%"
+     width="80%"
+      >
+      <source src="promvalentine.mp4" type="video/mp4"/>
+      <figcaption>
+          we will walk together like this!
+      </figcaption>
+      </video>
+  </figure>
 
 </div>
 <hr>
