--- a/teddyday24.html
+++ b/teddyday24.html
@@ -11,8 +11,8 @@
 <p></p>
 
 <div style="text-align:center">
-  <a href="https://open.spotify.com/track/3oWxFNsXstcancCR1wODR4?si=WHT2g0nPSsqsBrgjMKuc5A&context=spotify%3Aplaylist%3A37i9dQZF1DX14CbVHtvHRB"><button style=" font-size:3vw">Open in Spotify</button></a>  
-  <a href="https://music.youtube.com/watch?v=39BOqZO8xaM"><button style=" font-size:3vw">Open in Youtube Music</button></a>
+  <a href="https://open.spotify.com/track/189DQylImZ1hGZaIpAQUzx?si=9POHGhzHRd6eMKtorlSp-Q"><button style=" font-size:3vw">Open in Spotify</button></a>  
+  <a href="https://music.youtube.com/watch?v=X4rEsj4z7MY"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">Honey, not today but definitely gonna get u a teddy very soon because I want to see that precious smile on your face when u get it. Just look at you... GORGEOUS!</p>
   <img src="teddy.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
   <p style="text-align:center; font-size:3vw">I love you jaan!!</p>
