--- a/teddyday24.html
+++ b/teddyday24.html
@@ -15,7 +15,7 @@
   <a href="https://music.youtube.com/watch?v=X4rEsj4z7MY"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">Honey, not today but definitely gonna get u a teddy very soon because I want to see that precious smile on your face when u get it. Just look at you... GORGEOUS!</p>
   <img src="teddy.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
-  <p style="text-align:center; font-size:3vw">I love you jaan!! You look so adorable!!</p>
+  <p style="text-align:center; font-size:3vw">I love you jaan!! You look so adorable!! CUTIEEEEE ;)</p>
 
 </div>
 <hr>
