--- a/promiseday24.html
+++ b/promiseday24.html
@@ -11,8 +11,8 @@
 <p></p>
 
 <div style="text-align:center">
-  <a href="https://open.spotify.com/track/3oWxFNsXstcancCR1wODR4?si=WHT2g0nPSsqsBrgjMKuc5A&context=spotify%3Aplaylist%3A37i9dQZF1DX14CbVHtvHRB"><button style=" font-size:3vw">Open in Spotify</button></a>  
-  <a href="https://music.youtube.com/watch?v=39BOqZO8xaM"><button style=" font-size:3vw">Open in Youtube Music</button></a>
+  <a href="https://open.spotify.com/track/1kcgh8BXTRWyKG7YHmhkIW?si=HTeNDZW5RhiZV92K_vY4Hw"><button style=" font-size:3vw">Open in Spotify</button></a>  
+  <a href="https://music.youtube.com/watch?v=urZD_E0WJdE"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">Today, honey I want to promise you 7 things and will hold them till my last breath.</p>
   <img src="promise.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
    <p style="text-align:center; font-size:3vw">Will make them fruitful not hollow. I love you jaan!!</p>
@@ -22,6 +22,7 @@
   </p>
   <figure>
     <video
+      autoplay
       controls
       muted
       loop
