--- a/kissday24.html
+++ b/kissday24.html
@@ -11,11 +11,12 @@
 <p></p>
 
 <div style="text-align:center">
-  <a href="https://open.spotify.com/track/4mBmsPcPa1Eu4LDTHq55Ab?si=4fd44ba078f846d1"><button style=" font-size:3vw">Open in Spotify</button></a>  
-  <a href="https://music.youtube.com/watch?v=39BOqZO8xaM"><button style=" font-size:3vw">Open in Youtube Music</button></a>
-  <p style="text-align:left; font-size:3vw">Honeyyyyy! Kissss meeeeee!!! You are the cutest see the vude honey u look fabulous!</p>
+  <a href="https://open.spotify.com/track/4mBmsPcPa1Eu4LDTHq55Ab?si=UxCmad2pSUKDAz23OYrr8A"><button style=" font-size:3vw">Open in Spotify</button></a>  
+  <a href="https://music.youtube.com/watch?v=31f0mVT2Mvc"><button style=" font-size:3vw">Open in Youtube Music</button></a>
+  <p style="text-align:left; font-size:3vw">Honeyyyyy! Kissss meeeeee!!! You are the cutest see the videos honey u look fabulous!</p>
   <figure>
                 <video
+                    autoplay
                     controls
                     hieght = "80%"
                     width = "80%"
@@ -31,6 +32,7 @@
                 <br>
                 <br>
                 <video
+                    autoplay
                     controls
                     muted
                     loop
@@ -45,7 +47,14 @@
                 </figcaption>
             </figure>
   <p style="text-align:center; font-size:3vw">I love you jaan!!</p>
+  <p style="text-align:center; font-size:3vw">Juat for fun here's another song for you today!! - Choose where to open:</p>
+<p></p>
+<p></p>
 
+<div style="text-align:center">
+  <a href="https://open.spotify.com/track/0oy4Zk7CVLObwnDX8YZZ1e?si=up8RRC6iRxuxQg0uuSKKrA"><button style=" font-size:3vw">Open in Spotify</button></a>  
+  <a href="https://music.youtube.com/watch?v=embGHUTKuRY"><button style=" font-size:3vw">Open in Youtube Music</button></a>
+<p style="text-align:left; font-size:3vw">De De yaar ... raha nhi jaata!!! Ufffff!!!</p>
 </div>
 <hr>
 <p style="text-align:center; font-size:3vw">I will keep updating this so make sure u keep an eye on!</p>
