--- a/valentineDay24.html
+++ b/valentineDay24.html
@@ -11,12 +11,45 @@
 <p></p>
 
 <div style="text-align:center">
-  <a href="https://open.spotify.com/track/3oWxFNsXstcancCR1wODR4?si=WHT2g0nPSsqsBrgjMKuc5A&context=spotify%3Aplaylist%3A37i9dQZF1DX14CbVHtvHRB"><button style=" font-size:3vw">Open in Spotify</button></a>  
-  <a href="https://music.youtube.com/watch?v=39BOqZO8xaM"><button style=" font-size:3vw">Open in Youtube Music</button></a>
+  <a href="https://open.spotify.com/track/0tgVpDi06FyKpA1z0VMD4v?si=IpqNgQncQsi65djmuRpgVA"><button style=" font-size:3vw">Open in Spotify</button></a>  
+  <a href="https://music.youtube.com/watch?v=ORrFJ63nlcA"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">Hey GORGEOUS! it's Valentine's day and today I need the answer for my letter I gave you on Propose Day. So maadaaammmm - </p>
 
-  <img src="teddy.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
+  <img src="valentine.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
   <p style="text-align:center; font-size:5vw">Will you be my valentine??</p>
+
+   <figure>
+                <video
+                    autoplay
+                    controls
+                    hieght = "80%"
+                    width = "80%"
+                    muted
+                    loop
+                >   
+                    <source src="valet.mp4" type="video/mp4"/>
+                    
+                </video>
+                <figcaption>
+                  We look HOT!
+                </figcaption>
+                <br>
+                <br>
+                <video
+                    autoplay
+                    controls
+                    muted
+                    loop
+                    hieght="80%"
+                    width="80%"
+                >
+                    <source src="valet2nd.mp4" type="video/mp4"/>
+                    
+                </video>
+                <figcaption>
+                   Kat lu itna pyar hai
+                </figcaption>
+            </figure>
 
 </div>
 <hr>
