--- a/hugday24.html
+++ b/hugday24.html
@@ -14,7 +14,21 @@
   <a href="https://open.spotify.com/track/3oWxFNsXstcancCR1wODR4?si=WHT2g0nPSsqsBrgjMKuc5A&context=spotify%3Aplaylist%3A37i9dQZF1DX14CbVHtvHRB"><button style=" font-size:3vw">Open in Spotify</button></a>  
   <a href="https://music.youtube.com/watch?v=39BOqZO8xaM"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">Honey, I love the warmth when you come closer to me and we wrap our arms around eachother..It's THE BEST feeling and moment.. Remember the first Hug in that stairway?? Remember the Hug at Metro station in Lucknow? I need that warmth again.. I want to hug you forever... Missing you immensely!</p>
-  <img src="teddy.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
+   <figure>
+    <video
+      autoplay
+      controls
+      muted
+      loop
+      hieght="80%"
+     width="80%"
+      >
+      <source src="hugkiss.mp4" type="video/mp4"/>
+      <figcaption>
+          THE LOVE UFFFFFFF!!!!!
+      </figcaption>
+      </video>
+  </figure>
   <p style="text-align:center; font-size:3vw">I love you jaan!!</p>
 
 </div>
