--- a/hugday24.html
+++ b/hugday24.html
@@ -11,8 +11,8 @@
 <p></p>
 
 <div style="text-align:center">
-  <a href="https://open.spotify.com/track/3oWxFNsXstcancCR1wODR4?si=WHT2g0nPSsqsBrgjMKuc5A&context=spotify%3Aplaylist%3A37i9dQZF1DX14CbVHtvHRB"><button style=" font-size:3vw">Open in Spotify</button></a>  
-  <a href="https://music.youtube.com/watch?v=39BOqZO8xaM"><button style=" font-size:3vw">Open in Youtube Music</button></a>
+  <a href="https://open.spotify.com/track/6V7UVqe8XnAS4WPdpaw5TK?si=UOuHHjgUTbCMs6qizQcaTw&context=spotify%3Aplaylist%3A37i9dQZF1DX14CbVHtvHRB">Open in Spotify</button></a>  
+  <a href="https://music.youtube.com/watch?v=aDtbpeTpM1E"><button style=" font-size:3vw">Open in Youtube Music</button></a>
   <p style="text-align:left; font-size:3vw">Honey, I love the warmth when you come closer to me and we wrap our arms around eachother..It's THE BEST feeling and moment.. Remember the first Hug in that stairway?? Remember the Hug at Metro station in Lucknow? I need that warmth again.. I want to hug you forever... Missing you immensely!</p>
    <figure>
     <video
@@ -20,8 +20,8 @@
       controls
       muted
       loop
-      hieght="80%"
-     width="80%"
+      hieght="90%"
+     width="90%"
       >
       <source src="hugkiss.mp4" type="video/mp4"/>
       <figcaption>
