--- a/valentineDay24.html
+++ b/valentineDay24.html
@@ -49,9 +49,27 @@
                 <figcaption>
                    Kat lu itna pyar hai
                 </figcaption>
+       <br>
+                <br>
+                <video
+                    autoplay
+                    controls
+                    muted
+                    loop
+                    hieght="90%"
+                    width="90%"
+                >
+                    <source src="valet3.mp4" type="video/mp4"/>
+                    
+                </video>
+                <figcaption>
+                  Baby I've noot muted this video, so play on earbuds, kindly don't mute!
+                  Just see these nights UFFF!!!!
+                </figcaption>
             </figure>
 
 </div>
+  <p style="text-align:center; font-size:3vw">Darling you are perfect!!</p>
 <hr>
 <p style="text-align:center; font-size:3vw">I will keep updating this so make sure u keep an eye on!</p>
 </body>
