--- a/valentineDay24.html
+++ b/valentineDay24.html
@@ -52,9 +52,7 @@
        <br>
                 <br>
                 <video
-                    autoplay
                     controls
-                    muted
                     loop
                     hieght="90%"
                     width="90%"
@@ -63,7 +61,7 @@
                     
                 </video>
                 <figcaption>
-                  Baby I've noot muted this video, so play on earbuds, kindly don't mute!
+                  Baby I've not muted this video but if no sound comes kindly unmute!.
                   Just see these nights UFFF!!!!
                 </figcaption>
             </figure>
