--- a/promiseday24.html
+++ b/promiseday24.html
@@ -19,6 +19,7 @@
   <img src="promise2.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
   <p style="text-align:center; font-size:3vw">But I need you to hold my hand like this forever!!
   AND!!!!!
+    We will walk together like this till the sun rises from the west!!
   </p>
   <figure>
     <video
@@ -26,8 +27,8 @@
       controls
       muted
       loop
-      hieght="80%"
-     width="80%"
+      hieght="90%"
+     width="90%"
       >
       <source src="promise.mp4" type="video/mp4"/>
       <figcaption>
