--- a/homepage.html
+++ b/homepage.html
@@ -13,6 +13,8 @@
       <ul>
         <li><a href="roseday24.html" style="font-size: 3vw">Rose day 2024!</a></li>
         <li><a href="proposeday24.html" style="font-size: 3vw">Propose day 2024!</a></li>
+        <li><a href="chocolateday24.html" style="font-size: 3vw">Chocolate day 2024!</a></li>
+        <li><a href="teddyday24.html" style="font-size: 3vw">Teddy day 2024!</a></li>
       </ul>
     </div>
     
