--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,15 @@
   </head>
   <body>
     <h1 style="font-size: 10w ; text-align: center">Welcome, Aakarshini</h1>
-    <p style="font-size: 3vw">Processing request...</p>
+    <h2 style="text-align:center; font-size:5vw">Hi meri Aakasrhini, meri Jaan!!</h2>
+<p style="text-align:center; font-size:3vw">I am dedicating this song to you today - Choose where to open:</p>
+<p></p>
+<p></p>
+
+<div style="text-align:center">
+  <a href="https://open.spotify.com/track/2tjWCe2W7sgvS3C8NHcdtI?si=VHqMcmvGR3urrswr3rePJQ"><button style=" font-size:3vw">Open in Spotify</button></a>  
+  <a href="https://music.youtube.com/watch?v=h3EuilWNquo"><button style=" font-size:3vw">Open in Youtube Music</button></a>
+    
     <div>
       <h2 style="font-size: 5w">History?: </h2>
       <ul>
