--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
   <a href="https://open.spotify.com/track/2tjWCe2W7sgvS3C8NHcdtI?si=VHqMcmvGR3urrswr3rePJQ"><button style=" font-size:3vw">Open in Spotify</button></a>  
   <a href="https://music.youtube.com/watch?v=h3EuilWNquo"><button style=" font-size:3vw">Open in Youtube Music</button></a>
     
-    <div>
+    <div style="text-align:left">
       <h2 style="font-size: 5w">History?: </h2>
       <ul>
         <li><a href="roseday24.html" style="font-size: 3vw">Rose day 2024!</a></li>
