--- a/kissday24.html
+++ b/kissday24.html
@@ -47,7 +47,7 @@
                 </figcaption>
             </figure>
   <p style="text-align:center; font-size:3vw">I love you jaan!!</p>
-  <p style="text-align:center; font-size:3vw">Juat for fun here's another song for you today!! - Choose where to open:</p>
+  <p style="text-align:center; font-size:3vw">Just for fun here's another song for you today!! - Choose where to open:</p>
 <p></p>
 <p></p>
 
