--- a/homepage.html
+++ b/homepage.html
@@ -23,6 +23,9 @@
         <li><a href="proposeday24.html" style="font-size: 3vw">Propose day 2024!</a></li>
         <li><a href="chocolateday24.html" style="font-size: 3vw">Chocolate day 2024!</a></li>
         <li><a href="teddyday24.html" style="font-size: 3vw">Teddy day 2024!</a></li>
+<li><a href="promiseday24.html" style="font-size: 3vw">Promise day 2024!</a></li>
+
+<li><a href="kissday24.html" style="font-size: 3vw">Kiss day 2024!</a></li>
       </ul>
     </div>
     
