--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
 <html lang = "en">
   <head>
     <title>Homepage</title>
-    <meta charset="UTF-8" http-equiv="refresh" content="0; url='kissday24.html'">
+    <meta charset="UTF-8" http-equiv="refresh" content="0; url='hugday24.html'">
     <link rel="stylesheet" href="normalize.css" media="screen" />
   </head>
   <body>
