--- a/homepage.html
+++ b/homepage.html
@@ -18,15 +18,15 @@
     
     <div style="text-align:left">
       <h2 style="font-size: 5w">History?: </h2>
-      <ul>
+      <ol>
         <li><a href="roseday24.html" style="font-size: 3vw">Rose day 2024!</a></li>
         <li><a href="proposeday24.html" style="font-size: 3vw">Propose day 2024!</a></li>
         <li><a href="chocolateday24.html" style="font-size: 3vw">Chocolate day 2024!</a></li>
         <li><a href="teddyday24.html" style="font-size: 3vw">Teddy day 2024!</a></li>
-<li><a href="promiseday24.html" style="font-size: 3vw">Promise day 2024!</a></li>
-
-<li><a href="kissday24.html" style="font-size: 3vw">Kiss day 2024!</a></li>
-      </ul>
+        <li><a href="promiseday24.html" style="font-size: 3vw">Promise day 2024!</a></li>
+        <li><a href="kissday24.html" style="font-size: 3vw">Kiss day 2024!</a></li>
+        <li><a href="promiseday24.html" style="font-size: 3vw">Hug day 2024!</a></li>
+      </ol>
     </div>
     
   </body>
