--- a/hugday24.html
+++ b/hugday24.html
@@ -47,7 +47,7 @@
     
   </p>
   <br>
-  
+  <img src="hugme.png" alt="Click to view :(" style="width: 90%; hieght: auto">
 </div>
 <hr>
 <p style="text-align:center; font-size:3vw">I will keep updating this so make sure u keep an eye on!</p>
