--- a/hugday24.html
+++ b/hugday24.html
@@ -6,6 +6,7 @@
 <body>
 <h1 style="text-align:center; font-size:8vw">Happy Hug Day my love!!</h1>
 <h2 style="text-align:center; font-size:5vw">Hi meri Aakasrhini, meri Jaan!!</h2>
+<img src="hugday.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
 <p style="text-align:center; font-size:3vw">I am dedicating this song to you today - Choose where to open:</p>
 <p></p>
 <p></p>
