--- a/hugday24.html
+++ b/hugday24.html
@@ -6,10 +6,12 @@
 <body>
 <h1 style="text-align:center; font-size:8vw">Happy Hug Day my love!!</h1>
 <h2 style="text-align:center; font-size:5vw">Hi meri Aakasrhini, meri Jaan!!</h2>
-<img src="hugday.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
+<div style="text-align:center">
+  <img src="hugday.jpg" alt="Click to view :(" style="width: 90%; hieght: auto">
 <p style="text-align:center; font-size:3vw">I am dedicating this song to you today - Choose where to open:</p>
 <p></p>
 <p></p>
+</div>
 
 <div style="text-align:center">
   <a href="https://open.spotify.com/track/6V7UVqe8XnAS4WPdpaw5TK?si=UOuHHjgUTbCMs6qizQcaTw&context=spotify%3Aplaylist%3A37i9dQZF1DX14CbVHtvHRB"><button style=" font-size:3vw">Open in Spotify</button></a>  
