--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -2,6 +2,15 @@
 <html lang = "en">
   <head>
     <meta charset="utf-8">
+    <title>THE VALENTINE</title>
     <link rel="stylesheet" href="normalize.css" media="screen" />
   </head>
+  <body>
+    <hr>
+    <div style="text-align: center">
+      <img src="ValetHeading.jpg" alt="Happy Valentine's Day">
+      <br>
+      <img src="valet1.jpg" alt="Couldn't load the rose :(" style="width: 90%; hieght: auto">
+    </div>
+  </body>
 </html>
