--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -8,9 +8,9 @@
   <body>
     <hr>
     <div style="text-align: center">
-      <img src="ValetHeading.jpg" alt="Happy Valentine's Day">
+      <img src="ValetHeading.jpg" alt="Happy Valentine's Day" style="width: 90%; hieght: auto">
       <br>
-      <img src="valet1.jpg" alt="Couldn't load the rose :(" style="width: 90%; hieght: auto">
+      <img src="valet1.jpg" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto">
     </div>
   </body>
 </html>
