--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -9,8 +9,10 @@
     <hr>
     <div style="text-align: center">
       <img src="ValetHeading.jpg" alt="Happy Valentine's Day" style="width: 90%; hieght: auto">
+      <hr>
+      <hr>
       <br>
-      <img src="valet1.jpg" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto">
+      <a href=""><img src="valet1.jpg" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
   </body>
 </html>
