--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -5,7 +5,7 @@
     <title>THE VALENTINE</title>
     <link rel="stylesheet" href="normalize.css" media="screen" />
   </head>
-  <body>
+  <body style="background-color: #ffccff">
     <hr>
     <div style="text-align: center">
       <img src="ValetHeading.jpg" alt="Happy Valentine's Day" style="width: 90%; hieght: auto">
