--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -8,11 +8,12 @@
   <body style="background-color: #FCB6FC">
     <hr>
     <div style="text-align: center">
-      <img src="ValetHeading.jpg" alt="Happy Valentine's Day" style="width: 90%; hieght: auto">
+      <img src="ValetHeading.png" alt="Happy Valentine's Day" style="width: 90%; hieght: auto">
       <hr>
       <hr>
       <br>
-      <a href=""><img src="valet1.jpg" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet1.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet2.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
   </body>
 </html>
