--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -14,6 +14,37 @@
       <br>
       <a href=""><img src="valet1.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet2.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet3.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet4.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet5.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet6.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet7.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet8.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet9.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet10.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet11.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet12.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet13.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet14.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet15.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet16.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet17.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet18.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet19.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet20.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet21.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet22.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet23.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet24.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet25.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet26.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet27.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet28.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet29.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet30.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet31.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet32.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+       <a href=""><img src="valet32ext.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
     </div>
   </body>
 </html>
