--- a/theValentineDay.html
+++ b/theValentineDay.html
@@ -44,7 +44,9 @@
       <a href=""><img src="valet30.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet31.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
       <a href=""><img src="valet32.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
-       <a href=""><img src="valet32ext.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+      <a href=""><img src="valet32ext.png" alt="Couldn't load the beautiful lines! :(" style="width: 90%; hieght: auto"></a>
+    </div>
+    <div class="para1" style="text-align: center">
     </div>
   </body>
 </html>
